<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Clicker-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController id="9pv-A4-QxB" customClass="ClickerViewController" customModule="Clicker_UI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S19-b1-nJe">
                                <rect key="frame" x="173.5" y="426.5" width="67" height="43"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerDisplayLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Clicker" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1eI-dL-HDm">
                                <rect key="frame" x="20" y="267" width="374" height="37.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerNameTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j78-xg-mGS">
                                <rect key="frame" x="20" y="605" width="150" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerAddButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="+">
                                    <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                </state>
                                <connections>
                                    <action selector="addButtonTapped:" destination="9pv-A4-QxB" eventType="touchUpInside" id="TQx-vE-zk9"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Egf-ac-ynN">
                                <rect key="frame" x="244" y="605" width="150" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerSubtractButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="-">
                                    <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                </state>
                                <connections>
                                    <action selector="subtractButtonTapped:" destination="9pv-A4-QxB" eventType="touchUpInside" id="zKn-ui-uU4"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BN-0w-oVK">
                                <rect key="frame" x="176" y="106" width="62" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerResetButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Reset"/>
                                <connections>
                                    <action selector="resetButtonTapped:" destination="9pv-A4-QxB" eventType="touchUpInside" id="XB0-Wm-zSn"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="4BN-0w-oVK" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="8lm-a9-Ash"/>
                            <constraint firstItem="1eI-dL-HDm" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="20" id="Iz3-nR-tFx"/>
                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="1eI-dL-HDm" secondAttribute="trailing" constant="20" id="Tcs-iw-kes"/>
                            <constraint firstItem="S19-b1-nJe" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="iT9-Nl-khh"/>
                            <constraint firstItem="4BN-0w-oVK" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="62" id="ogI-OK-6aN"/>
                            <constraint firstItem="S19-b1-nJe" firstAttribute="centerY" secondItem="tsR-hK-woN" secondAttribute="centerY" id="p0C-JQ-7VR"/>
                            <constraint firstItem="S19-b1-nJe" firstAttribute="top" secondItem="1eI-dL-HDm" secondAttribute="bottom" constant="122" id="pcy-nY-YMS"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Clicker" image="plus" catalog="system" id="acW-dT-cKf"/>
                    <connections>
                        <outlet property="addButton" destination="j78-xg-mGS" id="axn-6t-Iz0"/>
                        <outlet property="clickerNameTextField" destination="1eI-dL-HDm" id="3sm-Ty-eFd"/>
                        <outlet property="clickerValueLabel" destination="S19-b1-nJe" id="7zv-6g-w9p"/>
                        <outlet property="resetButton" destination="4BN-0w-oVK" id="7Ps-6Y-3dO"/>
                        <outlet property="subtractButton" destination="Egf-ac-ynN" id="HFs-qh-WM0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.27536231884062" y="-320.08928571428572"/>
        </scene>
        <!--List-->
        <scene sceneID="wg7-f3-ORb">
            <objects>
                <viewController id="8rJ-Kc-sve" customClass="ClickerListViewController" customModule="Clicker_UI" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5B4-xe-Mm0">
                                <rect key="frame" x="341" y="44" width="53" height="36"/>
                                <accessibility key="accessibilityConfiguration" identifier="newClickerButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="+ Add"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clickers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZmJ-yr-09D">
                                <rect key="frame" x="176.5" y="70" width="61" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="clickerListLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="ZmJ-yr-09D" firstAttribute="centerX" secondItem="QS5-Rx-YEW" secondAttribute="centerX" id="9f5-Ny-Yhj"/>
                            <constraint firstItem="ZmJ-yr-09D" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="26" id="FXC-n4-0md"/>
                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="5B4-xe-Mm0" secondAttribute="trailing" constant="20" id="HtL-Pt-hkJ"/>
                            <constraint firstItem="5B4-xe-Mm0" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="Yoi-gI-n3d"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="List" image="list.dash" catalog="system" id="cPa-gy-q4n"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="749.27536231884062" y="359.59821428571428"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="yl2-sM-qoP">
            <objects>
                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                        <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    </tabBar>
                    <connections>
                        <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="0.0" y="0.0"/>
        </scene>
    </scenes>
    <resources>
        <image name="list.dash" catalog="system" width="64" height="44"/>
        <image name="plus" catalog="system" width="64" height="58"/>
    </resources>
</document>
